[package]
name = "m1kbsky"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.24.6"
neo4rs = "0.8.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
libipld = { version = "0.16", features = ["dag-cbor"] }
serde_derive = "1.0.214"
serde = "1.0.214"
serde_json = "1.0.132"
