[package]
name = "m1kbsky"
version = "0.1.0"
edition = "2021"

[dependencies]
neo4rs = "0.8.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
futures-util = "0.3.31"
serde_derive = "1.0.215"
serde = "1.0.215"
serde_json = "1.0.133"
regex = "1.11.1"
chrono = "0.4.38"
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.1"
axum-extra = { version = "0.9.6", features = ["typed-header"] } 
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec"] }

ctrlc = "3.4.5"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"]}
base64 = "0.22.1"
zstd = "0.13.2"
once_cell = "1.20.2"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
tokio-rustls = "0.26.0"
rustls = { version = "0.23.18", features = ["ring"] }
bytes = "1.8.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
